projects/lang/glue/proto/src/main/java/org/skb/lang/glue/proto/grammars/glueEbnfParser.java
// $ANTLR 3.3 Nov 30, 2010 12:50:56 V:\\dev\\skb\\projects\\lang\\glue\\proto\\src\\main\\java\\org\\skb\\lang\\glue\\proto\\grammars\\glueEbnf.g 2011-07-07 22:24:59

  package org.skb.lang.glue.proto.grammars;

  import java.util.LinkedHashMap;

  import org.skb.util.languages.AtomList;
  import org.skb.lang.glue.proto.GluePass1_Ebnf;
  import org.skb.tribe.LanguageTokens;
  import org.skb.lang.glue.proto.GlueTokensConstants;
  import org.skb.util.ReportManager;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class glueEbnfParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "AT_SPEC", "IDENT", "TOPOLOGY", "DOMAIN", "NODE", "CONNECTION", "DIRECTED", "SOURCE", "TARGET", "PORT", "SOURCEPORT", "TARGETPORT", "COMPONENT", "CONTRACTS", "POLICIES", "VAL_STRING", "VAL_XSTRING", "INTERFACE", "AT_SCOPE", "AT_LANG", "AT_KVL", "WS", "SL_COMMENT", "ML_COMMENT", "ESC", "VAL_CHAR", "UnicodeEscape", "OctalEscape", "HexDigit", "VAL_HEX", "';'", "'['", "']'", "'{'", "'}'", "'='", "'::'", "'@'"
    };
    public static final int EOF=-1;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int AT_SPEC=4;
    public static final int IDENT=5;
    public static final int TOPOLOGY=6;
    public static final int DOMAIN=7;
    public static final int NODE=8;
    public static final int CONNECTION=9;
    public static final int DIRECTED=10;
    public static final int SOURCE=11;
    public static final int TARGET=12;
    public static final int PORT=13;
    public static final int SOURCEPORT=14;
    public static final int TARGETPORT=15;
    public static final int COMPONENT=16;
    public static final int CONTRACTS=17;
    public static final int POLICIES=18;
    public static final int VAL_STRING=19;
    public static final int VAL_XSTRING=20;
    public static final int INTERFACE=21;
    public static final int AT_SCOPE=22;
    public static final int AT_LANG=23;
    public static final int AT_KVL=24;
    public static final int WS=25;
    public static final int SL_COMMENT=26;
    public static final int ML_COMMENT=27;
    public static final int ESC=28;
    public static final int VAL_CHAR=29;
    public static final int UnicodeEscape=30;
    public static final int OctalEscape=31;
    public static final int HexDigit=32;
    public static final int VAL_HEX=33;

    // delegates
    // delegators


        public glueEbnfParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public glueEbnfParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return glueEbnfParser.tokenNames; }
    public String getGrammarFileName() { return "V:\\dev\\skb\\projects\\lang\\glue\\proto\\src\\main\\java\\org\\skb\\lang\\glue\\proto\\grammars\\glueEbnf.g"; }


      private LanguageTokens myTokens;
      private GluePass1_Ebnf pass;
      private Token base_type;
      private boolean isArray=false;

      public void init() {
        this.pass=new GluePass1_Ebnf();
        this.myTokens = new LanguageTokens();
        this.myTokens.addTokens(tokenNames);
      }

      public void setFilename(String f){ReportManager.getInstance().setFileName(f);}
      public String getFilename(){return ReportManager.getInstance().getFileName();}

      private void setCppFile(String cpp){
        String fn=cpp.substring(1,cpp.lastIndexOf(':'));
        fn=fn.replace("file \"","");
        this.setFilename(fn);
      }

      public int  numberOfErrors() {return ReportManager.getInstance().noOfErrors();}
      public void resetErrors()    {ReportManager.getInstance().resetNoOfErrors();}
      public void displayRecognitionError(String[] tokenNames, RecognitionException re){ReportManager.getInstance().reportError(super.getErrorMessage(re, this.myTokens.getTokenNames()), re);}


    public static class glueSpecification_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "glueSpecification"
    // V:\\dev\\skb\\projects\\lang\\glue\\proto\\src\\main\\java\\org\\skb\\lang\\glue\\proto\\grammars\\glueEbnf.g:115:1: glueSpecification : AT_SPEC s= IDENT ';' ( glueTopology )* EOF -> ^( AT_SPEC IDENT ( glueTopology )* ) ;
    public final glueEbnfParser.glueSpecification_return glueSpecification() throws RecognitionException {
        glueEbnfParser.glueSpecification_return retval = new glueEbnfParser.glueSpecification_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token s=null;
        Token AT_SPEC1=null;
        Token char_literal2=null;
        Token EOF4=null;
        glueEbnfParser.glueTopology_return glueTopology3 = null;


        CommonTree s_tree=null;
        CommonTree AT_SPEC1_tree=null;
        CommonTree char_literal2_tree=null;
        CommonTree EOF4_tree=null;
        RewriteRuleTokenStream stream_IDENT=new RewriteRuleTokenStream(adaptor,"token IDENT");
        RewriteRuleTokenStream stream_AT_SPEC=new RewriteRuleTokenStream(adaptor,"token AT_SPEC");
        RewriteRuleTokenStream stream_EOF=new RewriteRuleTokenStream(adaptor,"token EOF");
        RewriteRuleTokenStream stream_34=new RewriteRuleTokenStream(adaptor,"token 34");
        RewriteRuleSubtreeStream stream_glueTopology=new RewriteRuleSubtreeStream(adaptor,"rule glueTopology");
        this.init();
        try {
            // V:\\dev\\skb\\projects\\lang\\glue\\proto\\src\\main\\java\\org\\skb\\lang\\glue\\proto\\grammars\\glueEbnf.g:116:20: ( AT_SPEC s= IDENT ';' ( glueTopology )* EOF -> ^( AT_SPEC IDENT ( glueTopology )* ) )
            // V:\\dev\\skb\\projects\\lang\\glue\\proto\\src\\main\\java\\org\\skb\\lang\\glue\\proto\\grammars\\glueEbnf.g:116:22: AT_SPEC s= IDENT ';' ( glueTopology )* EOF
            {
            AT_SPEC1=(Token)match(input,AT_SPEC,FOLLOW_AT_SPEC_in_glueSpecification93);  
            stream_AT_SPEC.add(AT_SPEC1);

            s=(Token)match(input,IDENT,FOLLOW_IDENT_in_glueSpecification97);  
            stream_IDENT.add(s);

            char_literal2=(Token)match(input,34,FOLLOW_34_in_glueSpecification99);  
            stream_34.add(char_literal2);

            // V:\\dev\\skb\\projects\\lang\\glue\\proto\\src\\main\\java\\org\\skb\\lang\\glue\\proto\\grammars\\glueEbnf.g:116:42: ( glueTopology )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==TOPOLOGY) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // V:\\dev\\skb\\projects\\lang\\glue\\proto\\src\\main\\java\\org\\skb\\lang\\glue\\proto\\grammars\\glueEbnf.g:116:42: glueTopology
            	    {
            	    pushFollow(FOLLOW_glueTopology_in_glueSpecification101);
            	    glueTopology3=glueTopology();

            	    state._fsp--;

            	    stream_glueTopology.add(glueTopology3.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);

            EOF4=(Token)match(input,EOF,FOLLOW_EOF_in_glueSpecification104);  
            stream_EOF.add(EOF4);



            // AST REWRITE
            // elements: AT_SPEC, glueTopology, IDENT
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 117:22: -> ^( AT_SPEC IDENT ( glueTopology )* )
            {
                // V:\\dev\\skb\\projects\\lang\\glue\\proto\\src\\main\\java\\org\\skb\\lang\\glue\\proto\\grammars\\glueEbnf.g:117:25: ^( AT_SPEC IDENT ( glueTopology )* )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot(stream_AT_SPEC.nextNode(), root_1);

                adaptor.addChild(root_1, stream_IDENT.nextNode());
                // V:\\dev\\skb\\projects\\lang\\glue\\proto\\src\\main\\java\\org\\skb\\lang\\glue\\proto\\grammars\\glueEbnf.g:117:41: ( glueTopology )*
                while ( stream_glueTopology.hasNext() ) {
                    adaptor.addChild(root_1, stream_glueTopology.nextTree());

                }
                stream_glueTopology.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "glueSpecification"

    public static class glueTopology_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "glueTopology"
    // V:\\dev\\skb\\projects\\lang\\glue\\proto\\src\\main\\java\\org\\skb\\lang\\glue\\proto\\grammars\\glueEbnf.g:119:1: glueTopology : TOPOLOGY ( IDENT | scoped_name_lang ) '[' ( glueDomain | glueNode | glueConnection )* ']' -> ^( TOPOLOGY ( IDENT )? ( scoped_name_lang )? ( glueDomain )* ( glueNode )* ( glueConnection )* ) ;
    public final glueEbnfParser.glueTopology_return glueTopology() throws RecognitionException {
        glueEbnfParser.glueTopology_return retval = new glueEbnfParser.glueTopology_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token TOPOLOGY5=null;
        Token IDENT6=null;
        Token char_literal8=null;
        Token char_literal12=null;
        glueEbnfParser.scoped_name_lang_return scoped_name_lang7 = null;

        glueEbnfParser.glueDomain_return glueDomain9 = null;

        glueEbnfParser.glueNode_return glueNode10 = null;

        glueEbnfParser.glueConnection_return glueConnection11 = null;


        CommonTree TOPOLOGY5_tree=null;
        CommonTree IDENT6_tree=null;
        CommonTree char_literal8_tree=null;
        CommonTree char_literal12_tree=null;
        RewriteRuleTokenStream stream_TOPOLOGY=new RewriteRuleTokenStream(adaptor,"token TOPOLOGY");
        RewriteRuleTokenStream stream_IDENT=new RewriteRuleTokenStream(adaptor,"token IDENT");
        RewriteRuleTokenStream stream_35=new RewriteRuleTokenStream(adaptor,"token 35");
        RewriteRuleTokenStream stream_36=new RewriteRuleTokenStream(adaptor,"token 36");
        RewriteRuleSubtreeStream stream_glueDomain=new RewriteRuleSubtreeStream(adaptor,"rule glueDomain");
        RewriteRuleSubtreeStream stream_glueNode=new RewriteRuleSubtreeStream(adaptor,"rule glueNode");
        RewriteRuleSubtreeStream stream_scoped_name_lang=new RewriteRuleSubtreeStream(adaptor,"rule scoped_name_lang");
        RewriteRuleSubtreeStream stream_glueConnection=new RewriteRuleSubtreeStream(adaptor,"rule glueConnection");
        try {
            // V:\\dev\\skb\\projects\\lang\\glue\\proto\\src\\main\\java\\org\\skb\\lang\\glue\\proto\\grammars\\glueEbnf.g:119:20: ( TOPOLOGY ( IDENT | scoped_name_lang ) '[' ( glueDomain | glueNode | glueConnection )* ']' -> ^( TOPOLOGY ( IDENT )? ( scoped_name_lang )? ( glueDomain )* ( glueNode )* ( glueConnection )* ) )
            // V:\\dev\\skb\\projects\\lang\\glue\\proto\\src\\main\\java\\org\\skb\\lang\\glue\\proto\\grammars\\glueEbnf.g:119:22: TOPOLOGY ( IDENT | scoped_name_lang ) '[' ( glueDomain | glueNode | glueConnection )* ']'
            {
            TOPOLOGY5=(Token)match(input,TOPOLOGY,FOLLOW_TOPOLOGY_in_glueTopology150);  
            stream_TOPOLOGY.add(TOPOLOGY5);

            // V:\\dev\\skb\\projects\\lang\\glue\\proto\\src\\main\\java\\org\\skb\\lang\\glue\\proto\\grammars\\glueEbnf.g:119:31: ( IDENT | scoped_name_lang )
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==IDENT) ) {
                int LA2_1 = input.LA(2);

                if ( (LA2_1==41) ) {
                    alt2=2;
                }
                else if ( (LA2_1==35) ) {
                    alt2=1;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 2, 1, input);

                    throw nvae;
                }
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;
            }
            switch (alt2) {
                case 1 :
                    // V:\\dev\\skb\\projects\\lang\\glue\\proto\\src\\main\\java\\org\\skb\\lang\\glue\\proto\\grammars\\glueEbnf.g:119:32: IDENT
                    {
                    IDENT6=(Token)match(input,IDENT,FOLLOW_IDENT_in_glueTopology153);  
                    stream_IDENT.add(IDENT6);


                    }
                    break;
                case 2 :
                    // V:\\dev\\skb\\projects\\lang\\glue\\proto\\src\\main\\java\\org\\skb\\lang\\glue\\proto\\grammars\\glueEbnf.g:119:40: scoped_name_lang
                    {
                    pushFollow(FOLLOW_scoped_name_lang_in_glueTopology157);
                    scoped_name_lang7=scoped_name_lang();

                    state._fsp--;

                    stream_scoped_name_lang.add(scoped_name_lang7.getTree());

                    }
                    break;

            }

            char_literal8=(Token)match(input,35,FOLLOW_35_in_glueTopology160);  
            stream_35.add(char_literal8);

            // V:\\dev\\skb\\projects\\lang\\glue\\proto\\src\\main\\java\\org\\skb\\lang\\glue\\proto\\grammars\\glueEbnf.g:119:62: ( glueDomain | glueNode | glueConnection )*
            loop3:
            do {
                int alt3=4;
                switch ( input.LA(1) ) {
                case DOMAIN:
                    {
                    alt3=1;
                    }
                    break;
                case NODE:
                    {
                    alt3=2;
                    }
                    break;
                case CONNECTION:
                    {
                    alt3=3;
                    }
                    break;

                }

                switch (alt3) {
            	case 1 :
            	    // V:\\dev\\skb\\projects\\lang\\glue\\proto\\src\\main\\java\\org\\skb\\lang\\glue\\proto\\grammars\\glueEbnf.g:119:63: glueDomain
            	    {
            	    pushFollow(FOLLOW_glueDomain_in_glueTopology163);
            	    glueDomain9=glueDomain();

            	    state._fsp--;

            	    stream_glueDomain.add(glueDomain9.getTree());

            	    }
            	    break;
            	case 2 :
            	    // V:\\dev\\skb\\projects\\lang\\glue\\proto\\src\\main\\java\\org\\skb\\lang\\glue\\proto\\grammars\\glueEbnf.g:119:76: glueNode
            	    {
            	    pushFollow(FOLLOW_glueNode_in_glueTopology167);
            	    glueNode10=glueNode();

            	    state._fsp--;

            	    stream_glueNode.add(glueNode10.getTree());

            	    }
            	    break;
            	case 3 :
            	    // V:\\dev\\skb\\projects\\lang\\glue\\proto\\src\\main\\java\\org\\skb\\lang\\glue\\proto\\grammars\\glueEbnf.g:119:87: glueConnection
            	    {
            	    pushFollow(FOLLOW_glueConnection_in_glueTopology171);
            	    glueConnection11=glueConnection();

            	    state._fsp--;

            	    stream_glueConnection.add(glueConnection11.getTree());

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);

            char_literal12=(Token)match(input,36,FOLLOW_36_in_glueTopology175);  
            stream_36.add(char_literal12);



            // AST REWRITE
            // elements: glueDomain, TOPOLOGY, glueNode, glueConnection, scoped_name_lang, IDENT
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 120:22: -> ^( TOPOLOGY ( IDENT )? ( scoped_name_lang )? ( glueDomain )* ( glueNode )* ( glueConnection )* )
            {
                // V:\\dev\\skb\\projects\\lang\\glue\\proto\\src\\main\\java\\org\\skb\\lang\\glue\\proto\\grammars\\glueEbnf.g:120:25: ^( TOPOLOGY ( IDENT )? ( scoped_name_lang )? ( glueDomain )* ( glueNode )* ( glueConnection )* )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot(stream_TOPOLOGY.nextNode(), root_1);

                // V:\\dev\\skb\\projects\\lang\\glue\\proto\\src\\main\\java\\org\\skb\\lang\\glue\\proto\\grammars\\glueEbnf.g:120:36: ( IDENT )?
                if ( stream_IDENT.hasNext() ) {
                    adaptor.addChild(root_1, stream_IDENT.nextNode());

                }
                stream_IDENT.reset();
                // V:\\dev\\skb\\projects\\lang\\glue\\proto\\src\\main\\java\\org\\skb\\lang\\glue\\proto\\grammars\\glueEbnf.g:120:43: ( scoped_name_lang )?
                if ( stream_scoped_name_lang.hasNext() ) {
                    adaptor.addChild(root_1, stream_scoped_name_lang.nextTree());

                }
                stream_scoped_name_lang.reset();
                // V:\\dev\\skb\\projects\\lang\\glue\\proto\\src\\main\\java\\org\\skb\\lang\\glue\\proto\\grammars\\glueEbnf.g:120:61: ( glueDomain )*
                while ( stream_glueDomain.hasNext() ) {
                    adaptor.addChild(root_1, stream_glueDomain.nextTree());

                }
                stream_glueDomain.reset();
                // V:\\dev\\skb\\projects\\lang\\glue\\proto\\src\\main\\java\\org\\skb\\lang\\glue\\proto\\grammars\\glueEbnf.g:120:73: ( glueNode )*
                while ( stream_glueNode.hasNext() ) {
                    adaptor.addChild(root_1, stream_glueNode.nextTree());

                }
                stream_glueNode.reset();
                // V:\\dev\\skb\\projects\\lang\\glue\\proto\\src\\main\\java\\org\\skb\\lang\\glue\\proto\\grammars\\glueEbnf.g:120:83: ( glueConnection )*
                while ( stream_glueConnection.hasNext() ) {
                    adaptor.addChild(root_1, stream_glueConnection.nextTree());

                }
                stream_glueConnection.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "glueTopology"

    public static class glueDomain_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "glueDomain"
    // V:\\dev\\skb\\projects\\lang\\glue\\proto\\src\\main\\java\\org\\skb\\lang\\glue\\proto\\grammars\\glueEbnf.g:122:1: glueDomain : DOMAIN ( IDENT | scoped_name_lang ) '[' ( glueDomain | glueNode | glueConnection | gluePort )* ( glueContracts )? ( gluePolicies )? ( '{' key_value_list '}' )? ']' -> ^( DOMAIN ( IDENT )? ( scoped_name_lang )? ( glueDomain )* ( glueNode )* ( glueConnection )* ( gluePort )* ( glueContracts )? ( gluePolicies )? ( key_value_list )? ) ;
    public final glueEbnfParser.glueDomain_return glueDomain() throws RecognitionException {
        glueEbnfParser.glueDomain_return retval = new glueEbnfParser.glueDomain_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token DOMAIN13=null;
        Token IDENT14=null;
        Token char_literal16=null;
        Token char_literal23=null;
        Token char_literal25=null;
        Token char_literal26=null;
        glueEbnfParser.scoped_name_lang_return scoped_name_lang15 = null;

        glueEbnfParser.glueDomain_return glueDomain17 = null;

        glueEbnfParser.glueNode_return glueNode18 = null;

        glueEbnfParser.glueConnection_return glueConnection19 = null;

        glueEbnfParser.gluePort_return gluePort20 = null;

        glueEbnfParser.glueContracts_return glueContracts21 = null;

        glueEbnfParser.gluePolicies_return gluePolicies22 = null;

        glueEbnfParser.key_value_list_return key_value_list24 = null;


        CommonTree DOMAIN13_tree=null;
        CommonTree IDENT14_tree=null;
        CommonTree char_literal16_tree=null;
        CommonTree char_literal23_tree=null;
        CommonTree char_literal25_tree=null;
        CommonTree char_literal26_tree=null;
        RewriteRuleTokenStream stream_IDENT=new RewriteRuleTokenStream(adaptor,"token IDENT");
        RewriteRuleTokenStream stream_35=new RewriteRuleTokenStream(adaptor,"token 35");
        RewriteRuleTokenStream stream_36=new RewriteRuleTokenStream(adaptor,"token 36");
        RewriteRuleTokenStream stream_DOMAIN=new RewriteRuleTokenStream(adaptor,"token DOMAIN");
        RewriteRuleTokenStream stream_37=new RewriteRuleTokenStream(adaptor,"token 37");
        RewriteRuleTokenStream stream_38=new RewriteRuleTokenStream(adaptor,"token 38");
        RewriteRuleSubtreeStream stream_gluePolicies=new RewriteRuleSubtreeStream(adaptor,"rule gluePolicies");
        RewriteRuleSubtreeStream stream_glueDomain=new RewriteRuleSubtreeStream(adaptor,"rule glueDomain");
        RewriteRuleSubtreeStream stream_glueContracts=new RewriteRuleSubtreeStream(adaptor,"rule glueContracts");
        RewriteRuleSubtreeStream stream_glueNode=new RewriteRuleSubtreeStream(adaptor,"rule glueNode");
        RewriteRuleSubtreeStream stream_gluePort=new RewriteRuleSubtreeStream(adaptor,"rule gluePort");
        RewriteRuleSubtreeStream stream_scoped_name_lang=new RewriteRuleSubtreeStream(adaptor,"rule scoped_name_lang");
        RewriteRuleSubtreeStream stream_glueConnection=new RewriteRuleSubtreeStream(adaptor,"rule glueConnection");
        RewriteRuleSubtreeStream stream_key_value_list=new RewriteRuleSubtreeStream(adaptor,"rule key_value_list");
        try {
